More contact form alignment fixes

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,5 @@
 @import url("https://use.typekit.net/pzl7jlg.css");
 
-.App {
-  text-align: center;
-}
 
 
 * {
@@ -17,9 +14,6 @@ body {
   scroll-behavior: smooth;
 }
 
-body {
-  margin: 0;
-}
 
 canvas {
   background-color: aqua;
@@ -93,81 +87,9 @@ div.arrow:hover::before {
 }
 
 
-.infoWrap {
-  padding: 3vw;
-
-}
-
-
-
-
-.project-wrap {
-  display: flex;
-  justify-content: center;
-  /* Not working?? Project cards are off center on narrow screens */
-}
-
-.project {
-  text-align: center;
-  display: inline-block;
-  color: var(--darkShade);
-}
-
-#gitHubCard h5 {
-  font-weight: 1000;
-}
-
-.project-card {
-  background: var(--lightAccent);
-  /* Eventually add custom colors for each project */
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  margin-left: 1%;
-  margin-right: 1%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: 0.3s;
-  width: 20vw;
-  height: 30vh;
-  border-radius: 10px;
-  margin-bottom: 20px;
-}
-
-.project-card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.9);
-}
-
-.gitHubCard {
-  margin-left: 6%;
-  text-align: center;
-  padding-top: 2%;
-  background: var(--lightAccent);
-  /* Eventually add custom colors for each project */
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
-  border-radius: 10px;
-  margin-top: 80px;
-  display: grid;
-}
-
-.gitHubCard:hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.9);
-}
-
-#githubimg {
-  display: inline-block;
-  vertical-align: center;
-  max-width: 50%;
-}
 
 SectionTitle {
   font-family: jeanne-moderno-geometrique, sans-serif;
-}
-
-#aboutMePic {
-  border-radius: 3% !important;
-  max-width: 20vw;
-  max-height: 30vh;
 }
 
 
